hphp/hack/test/typecheck/xhp_attr_9.php.exp
File "xhp_attr_9.php", line 5, characters 13-28:
Unbound name: NonExistentClass (an object type) (Naming[2049])
